# stm32-smbus

./: .gitignore  CMakeLists.txt  build.sh  gcc_stm32.cmake  gcc_stm32f4.cmake  main.c  mlx90614.c  mlx90614.h  rcc.c  rcc.h  smbus.c  smbus.h  stm32f4xx_conf.h  system_stm32f4xx.c  usart.c  usart.h  utils.c  utils.h
